syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "MessageProto";

service MessageService {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string content = 1;
}

message MessageResponse {
  string reply = 1;
}